# genai-lab

./: .gitignore  README.md  lab8.ipynb  lab_1.py  lab_10.py  lab_2.py  lab_3.py  lab_4.py  lab_5.py  lab_6.py  lab_7.py  lab_8.py  lab_9.py  pyproject.toml  requirements.txt  sample.txt
